# rtfm

./: .env  .env.example  .gitignore  Cargo.toml  README.md
all-distilroberta-v1/: config.json  rust_model.ot  tokenizer_config.json  train_script.py
hurl/: create_embeddings  create_source  parse_source
migrations/: 20230726193305_create_embeddings_table.sql  20230726193311_create_sources_table.sql  20230726193315_create_documents_table.sql  20230731075914_create_tables.sql
src/: cfg.rs  db.rs  embeddings.rs  encoder.rs  errors.rs  lib.rs  main.rs  middleware.rs  openai.rs  prelude.rs  tinyvector.rs
src/parser/: github.rs  mod.rs
src/routes/: api.rs  dashboard.rs  health_check.rs  mod.rs  search.rs  sources.rs
src/types/: mod.rs
templates/: chunks.html  docs.html  embeddings.html  search.html  source_form.html  sources.html  temp.html
