[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Konstantin Keller <koskeller@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "server"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = "0.14.27"
tower-http = { version = "0.4.1", features = ["trace", "timeout", "sensitive-headers", "request-id", "cors"] }
tower = { version = "0.4.13", features = []}
axum = "0.6.18"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
uuid = { version = "1.4.0", features = ["v4"] }

dotenv = "0.15"
thiserror = "1.0.43"
anyhow = "1.0.71"
bincode = "1.3.3"
serde_repr = "0.1.15"
markdown = "1.0.0-alpha.10"
octocrab = "0.28.0"
tiktoken-rs = "0.5.0"
crc32fast = "1.3.2"
async-openai = "0.12.2"
rayon = "1.7.0"
rust-bert = "0.21.0"
tch = "0.13.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml"] }
